# multimodal-document-analyst

./: .dockerignore  .env.example  .env.production.example  .gitignore  03-multimodal-document-analyst-build-plan.md  README.md  START_HERE_PROMPT.md  docker-compose.prod.yml  docker-compose.yml  pyproject.toml  requirements.txt
.github/: dependabot.yml
.github/workflows/: ci.yml
apps/accounts/: forms.py  urls.py  views.py
apps/audit/: admin.py  models.py
apps/chat/: admin.py  api_urls.py  api_views.py  fields.py  forms.py  models.py  serializers.py  services.py  tasks.py  urls.py  views.py
apps/documents/: admin.py  api_urls.py  api_views.py  forms.py  models.py  processing.py  serializers.py  tasks.py  urls.py  views.py
apps/evaluations/: admin.py  api_urls.py  api_views.py  models.py  serializers.py  urls.py  views.py
apps/exports/: admin.py  api_urls.py  api_views.py  models.py  serializers.py  services.py  urls.py  views.py
apps/extraction/: admin.py  api_urls.py  api_views.py  models.py  serializers.py  services.py  tasks.py
apps/review/: admin.py  api_urls.py  api_views.py  models.py  serializers.py  services.py  urls.py  views.py
apps/schemas/: admin.py  api_urls.py  api_views.py  apps.py  forms.py  models.py  serializers.py  urls.py  views.py
apps/workspaces/: admin.py  (+7 more)
config/: asgi.py  celery.py  health.py  urls.py  wsgi.py
docs/: architecture.md  demo_script.md  deployment.md  evaluation.md  extraction_schemas.md  manual_test_guide.md  release-checklist.md  security.md  technical-interview-guide.md  testing.md
templates/: base.html
(+70 files in other folders)
