[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "multimodal-document-analyst"
version = "0.1.0"
description = "Django document AI workflow for multimodal extraction, review, and cited chat."
requires-python = ">=3.12"
dependencies = [
    "Django>=5.2,<7.0",
    "celery[redis]>=5.4,<6.0",
    "django-environ>=0.11,<1.0",
    "djangorestframework>=3.15,<4.0",
    "gunicorn>=22,<24",
    "Pillow>=10.4,<12.0",
    "openai>=1.93,<2.0",
    "psycopg[binary]>=3.2,<4.0",
    "PyMuPDF>=1.24,<2.0",
    "whitenoise>=6.7,<7.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2,<9.0",
    "pytest-django>=4.8,<5.0",
    "playwright>=1.55,<2.0",
    "ruff>=0.5,<1.0",
]

[tool.setuptools.packages.find]
include = ["apps*", "config*", "services*", "workers*"]

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "config.settings.local"
python_files = ["test_*.py", "*_test.py"]
markers = [
    "e2e: browser-based end-to-end smoke tests",
]

[tool.ruff]
line-length = 100
target-version = "py312"
